base   page 检查评论框

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@ layout: base
     </div>
     <hr>
     {% include disqus.html %}
-    <hr>love my pan!
+    <hr>page!
     </hr>
   </div>
 </div>
