disqus.html恢复，base_title,page.html 增家

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,19 +1,7 @@
-<script type="text/javascript">
-var duoshuoQuery = {short_name:"anxingle"};
-    (function() {
-        var ds = document.createElement('script');
-        ds.type = 'text/javascript';ds.async = true;
-        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-        ds.charset = 'UTF-8';
-        (document.getElementsByTagName('head')[0] 
-         || document.getElementsByTagName('body')[0]).appendChild(ds);
-    })();
-    </script>
-<!--
+
 <div id="disqus_thread">
   <button type="button" name="{{ site.disqus.shortname }}" class="btn btn-default show-commend">	
-  	<i class="fa fa-comment-o fa-lg" style="color: #16a095;"></i>     修改显示评论按钮图标
+  	<i class="fa fa-comment-o fa-lg" style="color: #16a095;"></i>    <!-- 修改显示评论按钮图标  -->
 
   </button>
 </div>
--->
