--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,7 @@ layout: base
       {{ content }}
     </div>
     <hr>
-    {% include disqus.html %}
+   <!-- {% include disqus.html %}  -->
     <hr>page!
     </hr>
   </div>
