footer.html 增加多说 book减去disqus

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -54,7 +54,9 @@ layout: base
       {% endfor %}
     </div>
     <hr>
-    {% include disqus.html %}
+    <hr>book 
+    </hr>
+   <!-- {% include disqus.html %}  -->
   </div>
 </div>
 
