--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,16 @@
     $('a[href="#{{ site.active }}"]').tab('show');
 </script>
 
-
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"anxingle"};
+    (function() {
+        var ds = document.createElement('script');
+        ds.type = 'text/javascript';ds.async = true;
+        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+        ds.charset = 'UTF-8';
+        (document.getElementsByTagName('head')[0] 
+         || document.getElementsByTagName('body')[0]).appendChild(ds);
+    })();
+    </script>
 <!--button是右上方导航和显示目录的按钮-->
 
