base.html base_title.html 增加多说

--- a/_layouts/base_title.html
+++ b/_layouts/base_title.html
@@ -20,5 +20,18 @@
   {% include googleanalytics.html %}
   <hr>base_title
   </hr>
+      <!--  多说评论框 -->
+    <script type="text/javascript">
+var duoshuoQuery = {short_name:"anxingle"};
+    (function() {
+        var ds = document.createElement('script');
+        ds.type = 'text/javascript';ds.async = true;
+        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+        ds.charset = 'UTF-8';
+        (document.getElementsByTagName('head')[0] 
+         || document.getElementsByTagName('body')[0]).appendChild(ds);
+    })();
+    </script>
+    <!--  多说评论框 -->
 </body>
 </html>
