--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -56,7 +56,7 @@ layout: base
     <hr>
     <hr>book 
     </hr>
-   <!-- {% include disqus.html %}  -->
+    {% include disqus.html %}  
   </div>
 </div>
 
