--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,8 +11,7 @@ layout: base
       {{ content }}
     </div>
     <hr>
-   <!-- {% include disqus.html %}  -->
-    <hr>page!
-    </hr>
+   {% include disqus.html %}  
+  
   </div>
 </div>
