--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,33 +18,7 @@
     $('a[href="#{{ site.active }}"]').tab('show');
 </script>
 
-<!--   JiaThis分享 -->
-<!-- JiaThis Button BEGIN -->
-<div class="jiathis_style_32x32">
-    <a class="jiathis_button_qzone"></a>
-    <a class="jiathis_button_tsina"></a>
-    <a class="jiathis_button_tqq"></a>
-    <a class="jiathis_button_weixin"></a>
-    <a class="jiathis_button_renren"></a>
-    <a href="http://www.jiathis.com/share?uid=2067147" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
-    <a class="jiathis_counter_style"></a>
-</div>
-<script type="text/javascript">
-var jiathis_config = {data_track_clickback:'true'};
-</script>
-<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=2067147" charset="utf-8"></script>
-<!-- JiaThis Button END -->
-<!-- UJian Button BEGIN -->
-    <div class="ujian-hook"></div>
-    <script type="text/javascript" src="http://v1.ujian.cc/code/ujian.js"></script>
-<!-- UJian Button END -->
-<!-- jiaThis分享 -->
 
-<!-- EasyCounter -->
-<a href="http://www.easycounter.com/">
-<img src="http://www.easycounter.com/counter.php?anxingle"
-border="0" alt="page counter"></a>
-<br><a href="http://www.easycounter.com/">Website Hit Counter</a>
-<!-- EasyCounter -->
 <!--button是右上方导航和显示目录的按钮-->
+  <!-- 百度站长统计 -->
 
