--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -56,7 +56,9 @@ layout: base
     <hr>
     <hr>book 
     </hr>
-    {% include disqus.html %}  
+    {% include jiaThis.html %}  
+    {% include disqus.html %}
+
   </div>
 </div>
 
