--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,7 @@ layout: base
       {{ content }}
     </div>
     <hr>
+  {% include jiaThis.html %}  
    {% include disqus.html %} 
   </div>
   <!-- 目录 -->
