--- a/_includes/jiaThis.html
+++ b/_includes/jiaThis.html
@@ -1,5 +1,8 @@
 <!--   JiaThis分享 -->
 <!-- JiaThis Button BEGIN -->
+<hr>您可以分享该文章啦
+<br>
+</br>
 <div class="jiathis_style_32x32">
     <a class="jiathis_button_qzone"></a>
     <a class="jiathis_button_tsina"></a>
