--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,17 +2,7 @@
 <html>
 <head>
   {% include header.html %}
-  <!-- 百度站长统计 -->
-  <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?d34d797a3cb2f610267013cfe7d8daeb";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-<!-- 百度站长统计 -->
+  {% include baiduAnaly.html %}
 </head>
 <body>
   <div class="container">
