--- a/_includes/jiaThis.html
+++ b/_includes/jiaThis.html
@@ -24,8 +24,10 @@ var jiathis_config = {data_track_clickback:'true'};
 <!-- jiaThis分享 -->
 
 <!-- EasyCounter -->
+<div style="margin-left: 10px">
 <a href="http://www.easycounter.com/">
 <img src="http://www.easycounter.com/counter.php?anxingle"
 border="0" alt="page counter"></a>
-<br><a href="http://www.easycounter.com/">Website Hit Counter</a>
+<br><a href="http://www.easycounter.com/">网站访问量</a>
+</div>
 <!-- EasyCounter -->
