--- a/_includes/jiaThis.html
+++ b/_includes/jiaThis.html
@@ -1,6 +1,6 @@
 <!--   JiaThis分享 -->
 <!-- JiaThis Button BEGIN -->
-<hr>您可以分享该文章啦
+<hr>您可以分享该文章啦!
 <br>
 </br>
 <div class="jiathis_style_32x32">
@@ -24,7 +24,7 @@ var jiathis_config = {data_track_clickback:'true'};
 <!-- jiaThis分享 -->
 
 <!-- EasyCounter -->
-<div style="margin-left: 10px">
+<div style="margin-left: 20px">
 <a href="http://www.easycounter.com/">
 <img src="http://www.easycounter.com/counter.php?anxingle"
 border="0" alt="page counter"></a>
