--- a/_includes/jiaThis.html
+++ b/_includes/jiaThis.html
@@ -24,7 +24,7 @@ var jiathis_config = {data_track_clickback:'true'};
 <!-- jiaThis分享 -->
 
 <!-- EasyCounter -->
-<div style="margin-left: 20px">
+<div style="align: center">
 <a href="http://www.easycounter.com/">
 <img src="http://www.easycounter.com/counter.php?anxingle"
 border="0" alt="page counter"></a>
