--- a/_includes/jiaThis.html
+++ b/_includes/jiaThis.html
@@ -29,5 +29,7 @@ var jiathis_config = {data_track_clickback:'true'};
 <img src="http://www.easycounter.com/counter.php?anxingle"
 border="0" alt="page counter"></a>
 <br><a href="http://www.easycounter.com/">网站访问量</a>
+<hr>
+<font size="10">Discuss:(below)</font>
 </div>
 <!-- EasyCounter -->
