--- a/_includes/jiaThis.html
+++ b/_includes/jiaThis.html
@@ -29,6 +29,6 @@ var jiathis_config = {data_track_clickback:'true'};
 border="0" alt="page counter"></a>
 <br><a href="http://www.easycounter.com/">网站访问量</a>
 <hr>
-<font size="2">(below can discuss!)</font>
+<font size="2">-_-below can discuss!-_-</font>
 </div>
 <!-- EasyCounter -->
