增加阅读模式

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   </button>
 </div>
 <div style="position:fixed;right:15px;top:20px;">
-  <button id="nav_btn" class="btn btn-primary">
+  <button id="nav_btn" class="btn btn-primary">阅读模式
     <i class="fa fa-lg fa-navicon"></i>
   </button>
 </div>
