--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,3 +1,6 @@
+<!--
+  请复制自己的多说评论框代码   
+-->
 
 <div id="disqus_thread">
   <button type="button" name="{{ site.disqus.shortname }}" class="btn btn-default show-commend">	
