--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,12 +2,35 @@
   请复制自己的多说评论框代码   
 -->
 
+<!-- 来必力City版安装代码 -->
+<div id="lv-container" data-id="city" data-uid="MTAyMC8zMDM2OC82OTIx">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
+</div>
+<!-- City版安装代码已完成 -->
+
+<!--
 <div id="disqus_thread">
   <button type="button" name="{{ site.disqus.shortname }}" class="btn btn-default show-commend">	
-  	<i class="fa fa-comment-o fa-lg" style="color: #16a095;"></i>    <!-- 修改显示评论按钮图标  -->
-
+  	<i class="fa fa-comment-o fa-lg" style="color: #16a095;"></i>    
+-->
+      <!-- 修改显示评论按钮图标  -->
+<!--
   </button>
 </div>
+-->
 <!--
 
 
