数学公式引擎

--- a/_layouts/base_title.html
+++ b/_layouts/base_title.html
@@ -3,6 +3,7 @@
 <head>
   {% include header_title.html %}
   {% include baiduAnaly.html %}
+  {% include math.html %}
 </head>
 <body>
   <div class="container">
