--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,6 +3,10 @@
 <head>
   {% include header.html %}
   {% include baiduAnaly.html %}
+<!-- 数学公式解析 -->
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 </head>
 <body>
   <div class="container">
