--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
   {% include baiduAnaly.html %}
 <!-- 数学公式解析 -->
 <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 </head>
 <body>
