--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,17 @@
   {% include header.html %}
   {% include baiduAnaly.html %}
 <!-- 数学公式解析 -->
+<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
+       <script type="text/x-mathjax-config">
+         MathJax.Hub.Config({
+           tex2jax: {
+             inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+             processEscapes: true
+           }
+         });
+       </script>
+       <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+<!-- 数学公式解析 -->
 </head>
 <body>
   <div class="container">
