--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,6 +15,9 @@
        </script>
        <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <!-- 数学公式解析 -->
+<!-- 数学公式添加标号-->
+<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>
+<!-- 数学公式添加标号-->
 </head>
 <body>
   <div class="container">
