注释评论框

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,5 +1,6 @@
 
 <!-- 来必力City版安装代码 -->
+<!-- 如果要使用评论框，直接把这行注释删除就行
 <div id="lv-container" data-id="city" data-uid="MTAyMC8zMDM2OC82OTIx">
 	<script type="text/javascript">
    (function(d, s) {
@@ -16,8 +17,8 @@
 	</script>
 <noscript> 为正常使用来必力评论功能请激活JavaScript</noscript>
 </div>
+-->
 <!-- City版安装代码已完成 -->
-
 
 
 
