--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1,11 +1,11 @@
 /*!
- * Bootstrap v3.2.0 (http://getbootstrap.com)
+ * Bootstrap v3.2.0 (https://getbootstrap.com)
  * Copyright 2011-2014 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=0df2e7db5f1213317a44)
+ * Generated using the Bootstrap Customizer (https://getbootstrap.com/customize/?id=0df2e7db5f1213317a44)
  * Config saved to config.json and https://gist.github.com/0df2e7db5f1213317a44
  */
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
