--- a/_includes/jiaThis.html
+++ b/_includes/jiaThis.html
@@ -1,6 +1,6 @@
 <!-- 百度分享-->
 <div class="bdsharebuttonbox"><a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_qzone" data-cmd="qzone"></a><a href="#" class="bds_tsina" data-cmd="tsina"></a><a href="#" class="bds_tqq" data-cmd="tqq"></a><a href="#" class="bds_renren" data-cmd="renren"></a><a href="#" class="bds_weixin" data-cmd="weixin"></a></div>
-<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdPic":"","bdStyle":"0","bdSize":"16"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
+<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdPic":"","bdStyle":"0","bdSize":"16"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='https://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 
 <!--   JiaThis分享 -->
 <!-- JiaThis Button BEGIN -->
@@ -13,13 +13,13 @@
     <a class="jiathis_button_tqq"></a>
     <a class="jiathis_button_weixin"></a>
     <a class="jiathis_button_renren"></a>
-    <a href="http://www.jiathis.com/share?uid=2067147" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
+    <a href="https://www.jiathis.com/share?uid=2067147" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
     <a class="jiathis_counter_style"></a>
 </div>
 <script type="text/javascript">
 var jiathis_config = {data_track_clickback:'true'};
 </script>
-<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=2067147" charset="utf-8"></script>
+<script type="text/javascript" src="https://v3.jiathis.com/code/jia.js?uid=2067147" charset="utf-8"></script>
 -->
 <!-- JiaThis Button END -->
 
@@ -27,17 +27,17 @@ var jiathis_config = {data_track_clickback:'true'};
 <!-- UJian Button BEGIN -->
 	<!--
     <div class="ujian-hook"></div>
-    <script type="text/javascript" src="http://v1.ujian.cc/code/ujian.js"></script>
+    <script type="text/javascript" src="https://v1.ujian.cc/code/ujian.js"></script>
 	-->
 <!-- UJian Button END -->
 <!-- jiaThis分享 -->
 <br>
 <!-- EasyCounter -->
 <div style="align: center">
-<a href="http://www.easycounter.com/">
-<img src="http://www.easycounter.com/counter.php?anxingle"
+<a href="https://www.easycounter.com/">
+<img src="https://www.easycounter.com/counter.php?anxingle"
 border="0" alt="page counter"></a>
-<br><a href="http://www.easycounter.com/">网站访问量</a>
+<br><a href="https://www.easycounter.com/">网站访问量</a>
 
 <font size="2">-_-below can discuss!-_-</font>
 </div>
