--- a/_includes/math.html
+++ b/_includes/math.html
@@ -1,2 +1,8 @@
+
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+    });
+</script>
 <script src="/public/js/math.js"></script>
 <!-- 数学公式解析 -->
