feat: 引入scorllUP.js

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 <script src="/public/js/jquery.pjax.js"></script>
 <script src="/public/js/prettify/prettify.js"></script>
 <script src="/public/js/base.js"></script>
-<script src="/public/js/jquery.scrollUp.js"></script>
+<script src="https://cdn.bootcss.com/scrollup/2.4.1/jquery.scrollUp.js"></script>
 <script>
     $('a[href="#{{ site.active }}"]').tab('show');
 </script>
