Revert "fix: mathJax CDN变化"
This reverts commit 5098cd9d100b82924619ff276e8b03dd167cb4ac.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,6 +13,7 @@
            }
          });
        </script>
+       <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <!-- 数学公式解析 -->
 <!-- 数学公式添加标号-->
 <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>
